tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/redirect_port_and_scheme/a/to_tproxy/_test_context/VirtualService.3562911498.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - tproxy
  http:
  - match:
    - uri:
        exact: /foo
    redirect:
      derivePort: FROM_REQUEST_PORT
      scheme: https
